- fixed carreer table issue on small devices

--- a/src/styles/career.module.scss
+++ b/src/styles/career.module.scss
@@ -6,16 +6,20 @@
 
   table {
     border-collapse: collapse;
+    width: 100%;
+    table-layout: fixed;
 
     tr {
+      vertical-align: top;
       font-size: 0.9em;
 
       td:first-child {
+        width: max-content;
         font-weight: bold;
       }
 
       td:last-child {
-        padding-left: 0.5em;
+        padding-left: clamp(0.5em, 4vw, 2em);
       }
     }
   }
